# libigl

./: .gitignore  .gitmodules  CMakeLists.txt  GreenCoordinates.cpp  GreenCoordinates.h  InfluenceMap.cpp  InfluenceMap.h  LoadFBX.cpp  LoadMesh.cpp  LoadMesh.h  MaximumEntropyCoordinates.cpp  MaximumEntropyCoordinates.h  MaximumLikelihoodCoordinates.cpp  MaximumLikelihoodCoordinates.h  Parametrization.cpp  WeightInterpolation.cpp  WeightInterpolation.h  globals.cpp  main.cpp
LBC/: CMakeLists.txt  DataSetup.cpp
OpenFBX/: CMakeLists.txt
evaluation/: evaluation.py
somigliana/: CMakeLists.txt  cuda_impl.cu  cuda_impl.h  io.cc  io.h  quadrule.cpp  somigliana_2d.cc  somigliana_3d.cc  somigliana_3d.h  trig_quad_rule.cc  util.h
